--- a/TuyaNet.csproj
+++ b/TuyaNet.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>com.clusterrr.TuyaNet</RootNamespace>
     <AssemblyName>TuyaNet</AssemblyName>
     <PackageId>TuyaNet</PackageId>
